--- a/Code/ANN implementations on PIDDD.ipynb
+++ b/Code/ANN implementations on PIDDD.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "6a8f9175",
+   "id": "cfc35f47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4c3e6feb",
+   "id": "4c7ae222",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a96cfeb4",
+   "id": "3ed54d40",
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9670d191",
+   "id": "53159e1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c18abecf",
+   "id": "433af709",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a07e368d",
+   "id": "28c96c53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "4c1cbe09",
+   "id": "c10a50b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "4f24252c",
+   "id": "9f089801",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "36b6384b",
+   "id": "00b6f60f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "421c09a0",
+   "id": "cf2d12f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "3ed93be3",
+   "id": "c93c819c",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "daec69c8",
+   "id": "21c3a7c8",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "e532a1a2",
+   "id": "4cf9c6a4",
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "4b30757b",
+   "id": "ed1594f4",
    "metadata": {},
    "outputs": [
     {
@@ -383,15 +383,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
-   "id": "e16a8db7",
+   "execution_count": 145,
+   "id": "12c4477c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3/3 [==============================] - 0s 2ms/step\n"
+      "3/3 [==============================] - 0s 10ms/step\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [1 1]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [1 0]\n",
+      " [0 0]\n",
+      " [1 1]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [1 1]\n",
+      " [0 1]\n",
+      " [0 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 1]\n",
+      " [0 0]\n",
+      " [0 1]\n",
+      " [0 0]\n",
+      " [0 1]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [1 1]\n",
+      " [0 1]\n",
+      " [0 0]\n",
+      " [0 1]\n",
+      " [1 1]\n",
+      " [0 0]\n",
+      " [0 1]\n",
+      " [0 0]\n",
+      " [1 1]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 1]\n",
+      " [1 1]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 1]\n",
+      " [0 1]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [1 1]\n",
+      " [0 1]\n",
+      " [0 0]\n",
+      " [1 1]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 1]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [1 0]\n",
+      " [0 1]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [1 1]\n",
+      " [0 1]]\n"
      ]
     }
    ],
@@ -401,14 +476,14 @@
     "y_pred = ann.predict(X_test)\n",
     "# print(y_pred)\n",
     "y_pred = (y_pred > 0.5)\n",
-    "# print(y_pred)\n",
-    "# print(np.concatenate((y_pred.reshape(len(y_pred),1), y_test.reshape(len(y_test),1)),1))"
+    "#print(y_pred)\n",
+    "print(np.concatenate((y_pred.reshape(len(y_pred),1), y_test.reshape(len(y_test),1)),1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
-   "id": "01fa257d",
+   "execution_count": 141,
+   "id": "55737037",
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +500,7 @@
        "0.7733333333333333"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +508,7 @@
    "source": [
     "# confusion matrix\n",
     "from sklearn.metrics import confusion_matrix, accuracy_score\n",
-    "# print(y_pred)\n",
+    " \n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "print(cm)\n",
     "accuracy_score(y_test, y_pred)"
@@ -442,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "d25df9df",
+   "id": "6e714a3f",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "543cc309",
+   "id": "966536d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "313fde98",
+   "id": "054d18c0",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ab40eb1",
+   "id": "90c11445",
    "metadata": {},
    "outputs": [],
    "source": []
