pickle file added 08-03-2023

--- a/Code/ANN implementations on PIDDD.ipynb
+++ b/Code/ANN implementations on PIDDD.ipynb
@@ -644,8 +644,220 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "id": "90c11445",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3/3 [==============================] - 5s 95ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.0112975 ],\n",
+       "       [0.04386633],\n",
+       "       [0.5684958 ],\n",
+       "       [0.03846083],\n",
+       "       [0.08359502],\n",
+       "       [0.0493391 ],\n",
+       "       [0.63244534],\n",
+       "       [0.02702284],\n",
+       "       [0.7347143 ],\n",
+       "       [0.10204867],\n",
+       "       [0.09153318],\n",
+       "       [0.93818605],\n",
+       "       [0.2732453 ],\n",
+       "       [0.06248297],\n",
+       "       [0.5588429 ],\n",
+       "       [0.8060971 ],\n",
+       "       [0.01705206],\n",
+       "       [0.13704386],\n",
+       "       [0.03478429],\n",
+       "       [0.06377322],\n",
+       "       [0.31332746],\n",
+       "       [0.05671357],\n",
+       "       [0.34501886],\n",
+       "       [0.09642762],\n",
+       "       [0.23249187],\n",
+       "       [0.04100478],\n",
+       "       [0.09882023],\n",
+       "       [0.02903989],\n",
+       "       [0.0634    ],\n",
+       "       [0.03634946],\n",
+       "       [0.03077224],\n",
+       "       [0.846107  ],\n",
+       "       [0.25301012],\n",
+       "       [0.08105415],\n",
+       "       [0.08966552],\n",
+       "       [0.52777   ],\n",
+       "       [0.11150289],\n",
+       "       [0.14425828],\n",
+       "       [0.0228937 ],\n",
+       "       [0.9378799 ],\n",
+       "       [0.01600631],\n",
+       "       [0.13008882],\n",
+       "       [0.11821679],\n",
+       "       [0.24932401],\n",
+       "       [0.8608838 ],\n",
+       "       [0.08318147],\n",
+       "       [0.0364649 ],\n",
+       "       [0.02024829],\n",
+       "       [0.12403265],\n",
+       "       [0.3521457 ],\n",
+       "       [0.19213577],\n",
+       "       [0.03756615],\n",
+       "       [0.07623944],\n",
+       "       [0.07960729],\n",
+       "       [0.8497598 ],\n",
+       "       [0.13080558],\n",
+       "       [0.08607672],\n",
+       "       [0.944188  ],\n",
+       "       [0.06603993],\n",
+       "       [0.07863371],\n",
+       "       [0.46168205],\n",
+       "       [0.046177  ],\n",
+       "       [0.04359009],\n",
+       "       [0.03640384],\n",
+       "       [0.01112622],\n",
+       "       [0.02748821],\n",
+       "       [0.02748302],\n",
+       "       [0.0852851 ],\n",
+       "       [0.9652647 ],\n",
+       "       [0.33454427],\n",
+       "       [0.11684059],\n",
+       "       [0.2712688 ],\n",
+       "       [0.03679226],\n",
+       "       [0.68855363],\n",
+       "       [0.2892728 ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " ann.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "0ad4be1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "id": "83ca7893",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: ram://0873933b-8330-45f1-9e72-78a0429dce44/assets\n"
+     ]
+    }
+   ],
+   "source": [
+    "pickle.dump(ann, open('../PICKEL/ANNmodel.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "id": "0e17316e",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "Unsuccessful TensorSliceReader constructor: Failed to find any matching files for ram://f91e2a38-785d-4436-906d-60ccdbbcb467/variables/variables\n You may be trying to load on a different device from the computational device. Consider setting the `experimental_io_device` option in `tf.saved_model.LoadOptions` to the io_device such as '/job:localhost'.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [157], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Loading model to compare the results\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m modelANN \u001b[38;5;241m=\u001b[39m \u001b[43mpickle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m../PICKEL/ANNmodel.pkl\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\anaconda33\\envs\\cv\\lib\\site-packages\\keras\\saving\\pickle_utils.py:48\u001b[0m, in \u001b[0;36mdeserialize_model_from_bytecode\u001b[1;34m(serialized_model)\u001b[0m\n\u001b[0;32m     46\u001b[0m       \u001b[38;5;28;01mwith\u001b[39;00m tf\u001b[38;5;241m.\u001b[39mio\u001b[38;5;241m.\u001b[39mgfile\u001b[38;5;241m.\u001b[39mGFile(dest_path, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwb\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m     47\u001b[0m         f\u001b[38;5;241m.\u001b[39mwrite(archive\u001b[38;5;241m.\u001b[39mextractfile(name)\u001b[38;5;241m.\u001b[39mread())\n\u001b[1;32m---> 48\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43msave_module\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtemp_dir\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     49\u001b[0m tf\u001b[38;5;241m.\u001b[39mio\u001b[38;5;241m.\u001b[39mgfile\u001b[38;5;241m.\u001b[39mrmtree(temp_dir)\n\u001b[0;32m     50\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m model\n",
+      "File \u001b[1;32m~\\anaconda33\\envs\\cv\\lib\\site-packages\\keras\\utils\\traceback_utils.py:67\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     65\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:  \u001b[38;5;66;03m# pylint: disable=broad-except\u001b[39;00m\n\u001b[0;32m     66\u001b[0m   filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[1;32m---> 67\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n\u001b[0;32m     68\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[0;32m     69\u001b[0m   \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
+      "File \u001b[1;32m~\\anaconda33\\envs\\cv\\lib\\site-packages\\tensorflow\\python\\saved_model\\load.py:915\u001b[0m, in \u001b[0;36mload_partial\u001b[1;34m(export_dir, filters, tags, options)\u001b[0m\n\u001b[0;32m    912\u001b[0m   loader \u001b[38;5;241m=\u001b[39m Loader(object_graph_proto, saved_model_proto, export_dir,\n\u001b[0;32m    913\u001b[0m                   ckpt_options, options, filters)\n\u001b[0;32m    914\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m errors\u001b[38;5;241m.\u001b[39mNotFoundError \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m--> 915\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(\n\u001b[0;32m    916\u001b[0m       \u001b[38;5;28mstr\u001b[39m(err) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m You may be trying to load on a different device \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    917\u001b[0m       \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfrom the computational device. Consider setting the \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    918\u001b[0m       \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m`experimental_io_device` option in `tf.saved_model.LoadOptions` \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    919\u001b[0m       \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mto the io_device such as \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/job:localhost\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    920\u001b[0m root \u001b[38;5;241m=\u001b[39m loader\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m    921\u001b[0m root\u001b[38;5;241m.\u001b[39mgraph_debug_info \u001b[38;5;241m=\u001b[39m loader\u001b[38;5;241m.\u001b[39madjust_debug_info_func_names(debug_info)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: Unsuccessful TensorSliceReader constructor: Failed to find any matching files for ram://f91e2a38-785d-4436-906d-60ccdbbcb467/variables/variables\n You may be trying to load on a different device from the computational device. Consider setting the `experimental_io_device` option in `tf.saved_model.LoadOptions` to the io_device such as '/job:localhost'."
+     ]
+    }
+   ],
+   "source": [
+    "# Loading model to compare the results\n",
+    "modelANN = pickle.load(open('../PICKEL/ANNmodel.pkl','rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85a8f3a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelANN.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "id": "83cce05e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved model to disk\n"
+     ]
+    }
+   ],
+   "source": [
+    "# serialize weights to HDF5\n",
+    "ann.save_weights(\"../PICKEL/model.h5\")\n",
+    "print(\"Saved model to disk\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "id": "c17f8f5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'loaded_model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [161], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# load weights into new model\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mloaded_model\u001b[49m\u001b[38;5;241m.\u001b[39mload_weights(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../PICKEL/model.h5\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLoaded model from disk\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'loaded_model' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# load weights into new model\n",
+    "loaded_model.load_weights(\"../PICKEL/model.h5\")\n",
+    "print(\"Loaded model from disk\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f18bf167",
    "metadata": {},
    "outputs": [],
    "source": []
