--- a/Code/Feature engineering  Pima Indian Diabetes Disease Dataset (PIDDD) Feature engineering .ipynb
+++ b/Code/Feature engineering  Pima Indian Diabetes Disease Dataset (PIDDD) Feature engineering .ipynb
@@ -5664,6 +5664,167 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 225,
+   "id": "0fd77c3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Classification Model</th>\n",
+       "      <th>Accuracy</th>\n",
+       "      <th>Specificity</th>\n",
+       "      <th>Sensitivity</th>\n",
+       "      <th>Precision</th>\n",
+       "      <th>AUC</th>\n",
+       "      <th>F1-Score</th>\n",
+       "      <th>MCC</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>DT</td>\n",
+       "      <td>75.00</td>\n",
+       "      <td>87.69</td>\n",
+       "      <td>48.38</td>\n",
+       "      <td>87.69</td>\n",
+       "      <td>68.03</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>0.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>KNN(k=9)</td>\n",
+       "      <td>77.08</td>\n",
+       "      <td>86.15</td>\n",
+       "      <td>58.06</td>\n",
+       "      <td>86.15</td>\n",
+       "      <td>72.10</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>RF</td>\n",
+       "      <td>79.16</td>\n",
+       "      <td>90.76</td>\n",
+       "      <td>54.83</td>\n",
+       "      <td>90.76</td>\n",
+       "      <td>72.80</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LR</td>\n",
+       "      <td>80.72</td>\n",
+       "      <td>90.00</td>\n",
+       "      <td>61.29</td>\n",
+       "      <td>90.76</td>\n",
+       "      <td>74.41</td>\n",
+       "      <td>0.86</td>\n",
+       "      <td>0.52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SVM(Linear)</td>\n",
+       "      <td>80.20</td>\n",
+       "      <td>90.00</td>\n",
+       "      <td>59.67</td>\n",
+       "      <td>82.39</td>\n",
+       "      <td>74.83</td>\n",
+       "      <td>0.86</td>\n",
+       "      <td>0.52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>SVM(RBF)</td>\n",
+       "      <td>77.08</td>\n",
+       "      <td>91.53</td>\n",
+       "      <td>46.77</td>\n",
+       "      <td>91.53</td>\n",
+       "      <td>69.15</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>0.44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>SVM(poly)</td>\n",
+       "      <td>76.04</td>\n",
+       "      <td>93.84</td>\n",
+       "      <td>38.70</td>\n",
+       "      <td>93.84</td>\n",
+       "      <td>66.27</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>0.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>SVM(precomputed)</td>\n",
+       "      <td>80.20</td>\n",
+       "      <td>90.00</td>\n",
+       "      <td>59.67</td>\n",
+       "      <td>90.00</td>\n",
+       "      <td>74.83</td>\n",
+       "      <td>0.86</td>\n",
+       "      <td>0.74</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Classification Model  Accuracy  Specificity  Sensitivity  Precision    AUC  \\\n",
+       "0                   DT     75.00        87.69        48.38      87.69  68.03   \n",
+       "1             KNN(k=9)     77.08        86.15        58.06      86.15  72.10   \n",
+       "2                   RF     79.16        90.76        54.83      90.76  72.80   \n",
+       "3                   LR     80.72        90.00        61.29      90.76  74.41   \n",
+       "4          SVM(Linear)     80.20        90.00        59.67      82.39  74.83   \n",
+       "5             SVM(RBF)     77.08        91.53        46.77      91.53  69.15   \n",
+       "6            SVM(poly)     76.04        93.84        38.70      93.84  66.27   \n",
+       "7     SVM(precomputed)     80.20        90.00        59.67      90.00  74.83   \n",
+       "\n",
+       "   F1-Score   MCC  \n",
+       "0      0.82  0.39  \n",
+       "1      0.83  0.45  \n",
+       "2      0.85  0.49  \n",
+       "3      0.86  0.52  \n",
+       "4      0.86  0.52  \n",
+       "5      0.84  0.44  \n",
+       "6      0.84  0.40  \n",
+       "7      0.86  0.74  "
+      ]
+     },
+     "execution_count": 225,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 137,
    "id": "3caf94f7",
    "metadata": {},
