ipynb file well documented

--- a/Code/Code_Pima Indian Diabetes Disease Dataset (PIDDD) by Pankaj-Well-Documented.ipynb
+++ b/Code/Code_Pima Indian Diabetes Disease Dataset (PIDDD) by Pankaj-Well-Documented.ipynb
@@ -9,8 +9,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c56a993e",
+   "metadata": {},
+   "source": [
+    "### RECOMENDATION SYSTEM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31364fcb",
+   "metadata": {},
+   "source": [
+    "## Contents\n",
+    "\n",
+    "- [Importing Dataset](#Importing-Dataset)  \n",
+    "- [EDA](#EDA)  \n",
+    "- [Decision Tree](#Decision-Tree)\n",
+    "- [K-Nearest Neighbors](#K-Nearest-Neighbors)\n",
+    "- [Random Forest](#Random-Forest)\n",
+    "- [Logistic Regression](#Logistic-Regression)\n",
+    "- [Support Vector Machine|Linear](#Support-Vector-Machine|Linear)\n",
+    "- [ Support Vector Machine|RBF](#Support-Vector-Machine|RBF)\n",
+    "- [Hyper Parameter tuning ](#Hyper-Parameter-tuning )\n",
+    "- [Random Forest After Hyper Parameter Tuning ](#Random-Forest-After-Hyper-Parameter-Tuning )\n",
+    "- [SVM | RBF After Tuning](#SVM-|-RBF-After-Tuning)\n",
+    "- [SVM | LINEAR After Tuning ](#SVM-|-LINEAR-After-Tuning )\n",
+    "- [SVM | 'sigmoid' After Tuning](#SVM-|-'sigmoid'-After-Tuning) \n",
+    "- [SVM | Poly After Tuning ](#SVM-|-Poly-After-Tuning )\n",
+    "- [SVM | Poly After Tuning ](#SVM-|-Poly-After-Tuning )  \n",
+    "- [Logistic Regression | LR After Tuning ](#Logistic-Regression-|-LR-After-Tuning ) \n",
+    "- [Herparameter Optimization for K value](#Herparameter-Optimization-for-K-value)\n",
+    "- [Decision Tree Model Hyperparameter optimization](#Decision-Tree-Model-Hyperparameter-optimization) \n",
+    "- [Accuracy Comparision](#Accuracy-Comparision )"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "id": "20b0c8b9",
    "metadata": {},
    "outputs": [],
@@ -32,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "id": "cbe38576",
    "metadata": {},
    "outputs": [],
@@ -42,21 +78,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "37234dd9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pandas.core.frame.DataFrame"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(df)"
    ]
@@ -812,6 +837,14 @@
    ],
    "source": [
     "df.describe() # 5 point sumary "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1539f13",
+   "metadata": {},
+   "source": [
+    "# EDA"
    ]
   },
   {
@@ -2384,7 +2417,7 @@
    "id": "40d874da",
    "metadata": {},
    "source": [
-    "### Support Vector Machine (Linear)"
+    "### Support Vector Machine|Linear"
    ]
   },
   {
@@ -2497,7 +2530,7 @@
    "id": "896a3c39",
    "metadata": {},
    "source": [
-    "### Support Vector Machine (RBF)"
+    "### Support Vector Machine|RBF"
    ]
   },
   {
@@ -2882,7 +2915,7 @@
    "id": "a94f45ab",
    "metadata": {},
    "source": [
-    "## Random Forest"
+    "## Random Forest After Hyper Parameter Tuning "
    ]
   },
   {
@@ -3338,7 +3371,7 @@
    "id": "feddabea",
    "metadata": {},
    "source": [
-    "# SVM ( RBF)"
+    "# SVM | RBF After Tuning"
    ]
   },
   {
@@ -3771,7 +3804,7 @@
    "id": "75fb6f9e",
    "metadata": {},
    "source": [
-    "# SVM (LINEAR)"
+    "# SVM | LINEAR After Tuning "
    ]
   },
   {
@@ -3974,7 +4007,7 @@
    "id": "2ce0c874",
    "metadata": {},
    "source": [
-    "# SVM ('sigmoid')"
+    "# SVM | 'sigmoid' After Tuning "
    ]
   },
   {
@@ -4106,7 +4139,7 @@
    "id": "47ed0fb3",
    "metadata": {},
    "source": [
-    "# SVM (poly)"
+    "# SVM | Poly After Tuning "
    ]
   },
   {
@@ -4293,7 +4326,7 @@
    "id": "6a98d5b6",
    "metadata": {},
    "source": [
-    "# SVM ('precomputed')"
+    "# SVM | 'precomputed' After Tuning "
    ]
   },
   {
@@ -4474,7 +4507,7 @@
    "id": "6c5ce693",
    "metadata": {},
    "source": [
-    "# Logistic Regression ( LR )"
+    "# Logistic Regression | LR After Tuning "
    ]
   },
   {
@@ -4669,7 +4702,7 @@
    "id": "5c0209e8",
    "metadata": {},
    "source": [
-    "### Hyper parameter tuning on  LR"
+    "## Hyper parameter tuning on  LR"
    ]
   },
   {
@@ -5651,16 +5684,16 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "594648af",
+   "cell_type": "markdown",
+   "id": "176e0692",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Accuracy Comparision"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 5,
    "id": "1b4a8e03",
    "metadata": {},
    "outputs": [],
@@ -5670,7 +5703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 6,
    "id": "eda9abda",
    "metadata": {},
    "outputs": [
@@ -5702,27 +5735,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "b1c888cd",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [29], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mData\u001b[49m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Data' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 7,
    "id": "893d401d",
    "metadata": {},
    "outputs": [
@@ -5872,7 +5893,7 @@
        "7      0.86  0.74  "
       ]
      },
-     "execution_count": 137,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6017,12 +6038,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "931c725d",
+   "cell_type": "markdown",
+   "id": "e7f79542",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Thank You"
+   ]
   },
   {
    "cell_type": "code",
