documentation done with correct accuracy metrices

--- a/Code/Code_Pima Indian Diabetes Disease Dataset (PIDDD) by Pankaj.ipynb
+++ b/Code/Code_Pima Indian Diabetes Disease Dataset (PIDDD) by Pankaj.ipynb
@@ -4261,6 +4261,28 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "8796eb04",
+   "metadata": {},
+   "source": [
+    "AGSDFHDFGJFHJKFGHLKJSGRE4RW4R"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffb0b3ef",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18935c33",
+   "metadata": {},
+   "source": [
+    "### "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 45,
    "id": "c44eeb12",
